# studia

BIBLIAteka/: CMakeLists.txt  ReadMe.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
BIBLIAteka/data/: spisksiazek.txt  uzytkownicy.txt  wypozyczenia.txt
